<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<officalName>JavaFX-Extensions</officalName>
		<streaming.version>2.0.0-SNAPSHOT</streaming.version>
		<graphs.version>2.0.0-SNAPSHOT</graphs.version>
		<testfx.version>4.0.15-alpha</testfx.version>
		<jdk.version>11.0.2</jdk.version>
	</properties>

	<groupId>com.puresoltechnologies.javafx</groupId>
	<artifactId>parent</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>${officalName} - ${project.artifactId}</name>
	<description>PureSol Technologies' commons libraries</description>
	<inceptionYear>2018</inceptionYear>
	<url>http://opensource.puresol-technologies.com/javafx</url>

	<organization>
		<name>PureSol Technologies</name>
		<url>http://puresol-technologies.com</url>
	</organization>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<developerConnection>scm:git:https://github.com/PureSolTechnologies/javafx</developerConnection>
		<connection>scm:git:https://github.com/PureSolTechnologies/javafx</connection>
		<url>https://github.com/PureSolTechnologies/javafx.git</url>
		<tag>HEAD</tag>
	</scm>

	<developers>
		<developer>
			<name>Rick-Rainer Ludwig</name>
			<email>ludwig@puresol-technologies.com</email>
			<organization>PureSol Technologies</organization>
			<organizationUrl>http://puresol-technologies.com</organizationUrl>
			<url>http://rick-rainer-ludwig.com</url>
		</developer>
	</developers>

	<issueManagement>
		<system>Redmine</system>
		<url>https://bugs.puresol-technologies.net/projects/javafx</url>
	</issueManagement>

	<ciManagement>
		<system>PureSol Technologies Jenkins</system>
		<url>http://ci.puresol-technologies.net/job/javafx</url>
	</ciManagement>

	<distributionManagement>
		<site>
			<id>FTPPureSolTechnologiesCom</id>
			<name>FTPPureSolTechnologiesCom</name>
			<url>ftp://puresol-technologies.com/opensource.puresol-technologies.com/projects/javafx/${project.version}</url>
		</site>
	</distributionManagement>

	<repositories />
	<pluginRepositories />

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>it</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>3.0.0-M3</version>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<forkCount>1</forkCount>
							<reuseForks>false</reuseForks>
							<argLine><![CDATA[--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED]]></argLine>
							<includes>
								<include>**/*IT.java</include>
							</includes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.puresoltechnologies.javafx</groupId>
				<artifactId>charts</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.javafx</groupId>
				<artifactId>extensions</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.javafx</groupId>
				<artifactId>perspectives</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.javafx</groupId>
				<artifactId>preferences</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.javafx</groupId>
				<artifactId>reactive</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.javafx</groupId>
				<artifactId>tasks</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.javafx</groupId>
				<artifactId>utils</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.javafx</groupId>
				<artifactId>workspaces</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.graphs</groupId>
				<artifactId>trees</artifactId>
				<version>${graphs.version}</version>
			</dependency>
			<dependency>
				<groupId>com.puresoltechnologies.streaming</groupId>
				<artifactId>iterators</artifactId>
				<version>${streaming.version}</version>
			</dependency>
			<dependency>
				<groupId>io.reactivex.rxjava2</groupId>
				<artifactId>rxjava</artifactId>
				<version>2.2.4</version>
			</dependency>
			<dependency>
				<groupId>net.java.jdk</groupId>
				<artifactId>openjdk</artifactId>
				<version>${jdk.version}</version>
				<classifier>linux-x64</classifier>
				<type>tar.gz</type>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>net.java.jdk</groupId>
				<artifactId>openjdk</artifactId>
				<version>${jdk.version}</version>
				<classifier>windows-x64</classifier>
				<type>zip</type>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-base</artifactId>
				<version>11</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>11</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-graphics</artifactId>
				<version>11</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-web</artifactId>
				<version>11</version>
			</dependency>
			<dependency>
				<groupId>org.testfx</groupId>
				<artifactId>testfx-core</artifactId>
				<version>${testfx.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.testfx</groupId>
				<artifactId>testfx-junit5</artifactId>
				<version>${testfx.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.platform</groupId>
				<artifactId>junit-platform-commons</artifactId>
				<version>1.3.2</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.platform</groupId>
				<artifactId>junit-platform-launcher</artifactId>
				<version>1.3.2</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>5.3.2</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>5.3.2</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-params</artifactId>
				<version>5.3.2</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.vintage</groupId>
				<artifactId>junit-vintage-engine</artifactId>
				<version>5.3.2</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>com.puresoltechnologies.maven.plugins</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>1.2.1</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>validate</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<recursive>true</recursive>
					<skipOptionals>true</skipOptionals>
					<skipProvidedScope>true</skipProvidedScope>
					<skipTestScope>true</skipTestScope>
					<knownLicenses>
						<knownLicense>
							<name>The Apache Software License, Version 2.0</name>
							<url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
						</knownLicense>
						<knownLicense>
							<name>CC0 1.0 Universal</name>
							<url>https://creativecommons.org/publicdomain/zero/1.0/</url>
							<aliases>
								<aliase>CC0</aliase>
							</aliases>
						</knownLicense>
						<knownLicense>
							<name>GPLv2+CE</name>
							<url>http://openjdk.java.net/legal/gplv2+ce.html</url>
						</knownLicense>
						<knownLicense>
							<name><![CDATA[OPENJDK COMMUNITY TCK AND EA TCK LICENSE AGREEMENT V 3.0]]></name>
							<url>https://openjdk.java.net/legal/OCTLA-JDK9+.pdf</url>
							<approvedDependencies>
								<approvedDependency>net.java.jdk:openjdk:.*</approvedDependency>
							</approvedDependencies>
						</knownLicense>
					</knownLicenses>
				</configuration>
			</plugin>
			<!-- plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>findbugs-maven-plugin</artifactId> 
				<version>3.0.4</version> <executions> <execution> <phase>verify</phase> <goals> 
				<goal>check</goal> </goals> </execution> </executions> </plugin -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>10</source>
					<target>10</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<archive>
						<index>true</index>
						<manifestEntries>
							<Specification-Title>${project.name}</Specification-Title>
							<Specification-Version>${project.version}</Specification-Version>
							<Specification-Vendor>${project.organization.name}</Specification-Vendor>
							<Implementation-Title>${project.groupId}:${project.artifactId}</Implementation-Title>
							<Implementation-Version>${project.version}</Implementation-Version>
							<Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
							<Vendor-URL>${project.organization.url}</Vendor-URL>
							<Project-URL>${project.url}</Project-URL>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
						<configuration>
							<archive>
								<index>true</index>
								<manifestEntries>
									<Specification-Title>${project.name}</Specification-Title>
									<Specification-Version>${project.version}</Specification-Version>
									<Specification-Vendor>${project.organization.name}</Specification-Vendor>
									<Implementation-Title>${project.groupId}:${project.artifactId}</Implementation-Title>
									<Implementation-Version>${project.version}</Implementation-Version>
									<Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
									<Vendor-URL>${project.organization.url}</Vendor-URL>
									<Project-URL>${project.url}</Project-URL>
								</manifestEntries>
							</archive>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.8</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.6</version>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.20</version>
			</plugin>
		</plugins>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ftp</artifactId>
				<version>3.0.0</version>
			</extension>
		</extensions>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											com.puresoltechnologies.maven.plugins
										</groupId>
										<artifactId>
											license-maven-plugin
										</artifactId>
										<versionRange>
											[1.2.0,)
										</versionRange>
										<goals>
											<goal>validate</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-report-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>com.puresoltechnologies.maven.plugins</groupId>
				<artifactId>license-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>

	<modules>
		<module>utils</module>
		<module>reactive</module>
		<module>extensions</module>
		<module>preferences</module>
		<module>perspectives</module>
		<module>workspaces</module>
		<module>charts</module>
		<module>tasks</module>
		<module>test</module>
		<module>showroom</module>
	</modules>

</project>
